--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -1,12 +1,14 @@
 <div class="row">
-    <div class="col-sm-6 col-md-3">
+
+    <div *ngFor="let gif of gifs" class="col-12 col-sm-6 col-md-4 col-lg-2">
         <div class="card mb-2 text-center bg-dark" >
             <!-- TODO: Poner gifs -->
              <div class="card-body text-white">
                 <p class="card-text">
-                    Hola Mundo
+                   {{ gif.title }}
                 </p>
              </div>
         </div>
     </div>
+
 </div>
