--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -1,8 +1,11 @@
 <div class="row">
 
-    <div *ngFor="let gif of gifs" class="col-12 col-sm-6 col-md-4 col-lg-2">
+    <div *ngFor="let gif of gifs" class="col-12 col-sm-6 col-md-4 col-lg-3">
         <div class="card mb-2 text-center bg-dark" >
-            <!-- TODO: Poner gifs -->
+                <img 
+                    [src]="gif.images.downsized_medium.url" 
+                    [alt]="gif.title"
+                    class="card-img-top">
              <div class="card-body text-white">
                 <p class="card-text">
                    {{ gif.title }}
