--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -1,17 +1,9 @@
 <div class="row">
 
-    <div *ngFor="let gif of gifs" class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="card mb-2 text-center bg-dark" >
-                <img 
-                    [src]="gif.images.downsized_medium.url" 
-                    [alt]="gif.title"
-                    class="card-img-top">
-             <div class="card-body text-white">
-                <p class="card-text">
-                   {{ gif.title }}
-                </p>
-             </div>
-        </div>
-    </div>
+    <gif-card 
+        *ngFor="let gif of gifs" 
+        [gif]="gif" 
+        class="col-12 col-sm-6 col-md-4 col-lg-3">
+    </gif-card>
 
 </div>
